# wtf

./: .test.json  LICENSE  README.md  pyproject.toml  test.py  wtf.py
